<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_title">Quiz on World Heritage Sites</string>
    <string name="quiz_details">6 questions, each question answered correctly is worth 10 points</string>
    <string name="player_name">Name:</string>
    <string name="hint_name">type your name here</string>
    <string name="number_1">Question 1</string>
    <string name="question_1">What continent as the most World Heritage Sites?</string>
    <string name="question_1_answer1">type your answer here</string>
    <string name="number_2">Question 2</string>
    <string name="question_2">When was Évora (Portugal) included in the World Heritage List?</string>
    <integer name="question_2_answer1">1986</integer>
    <integer name="question_2_answer2">1972</integer>
    <integer name="question_2_answer3">1988</integer>
    <integer name="question_2_answer4">1994</integer>
    <string name="number_3">Question 3</string>
    <string name="question_3">Which of these countries as more than 10 sites in the World Heritage List? (check all that apply)</string>
    <string name="question_3_answer1">Malta</string>
    <string name="question_3_answer2">Iran</string>
    <string name="question_3_answer3">Ireland</string>
    <string name="question_3_answer4">Brazil</string>
    <string name="question_3_answer5">Portugal</string>
    <string name="question_3_answer6">Israel</string>
    <string name="number_4">Question 4</string>
    <string name="question_4">What is the Vredefort Dome, a World Heritage site in the South of Africa?</string>
    <string name="question_4_answer1">type your answer here</string>
    <string name="number_5">Question 5</string>
    <string name="question_5">From the following sites which of these are located in Europe? (check all that apply)</string>
    <string name="question_5_answer1">Lower Valley Omo</string>
    <string name="question_5_answer2">Masada</string>
    <string name="question_5_answer3">Fraser Island</string>
    <string name="question_5_answer4">Paphos</string>
    <string name="question_5_answer5">Delos</string>
    <string name="number_6">Question 6</string>
    <string name="question_6">How many countries have adhered to the World Heritage Convention?</string>
    <integer name="question_6_answer1">37</integer>
    <integer name="question_6_answer2">88</integer>
    <integer name="question_6_answer3">120</integer>
    <integer name="question_6_answer4">187</integer>
    <string name="button_submit_answers">Submit Answers</string>
    <string name="button_reset_score">Reset</string>
</resources>
