<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/world_heritage_logo" />

        <TextView
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/quiz_details"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/player_name"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/unesco_icon" />

            <TextView
                android:id="@+id/number_1"
                style="@style/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_1"
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/question_1_a1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/question_1_answer1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/unesco_icon" />

            <TextView
                android:id="@+id/number_2"
                style="@style/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_2"
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/question_2_radiobox"
            style="@style/questions_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_2_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_2_answer1" />

            <RadioButton
                android:id="@+id/question_2_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_2_answer2" />

            <RadioButton
                android:id="@+id/question_2_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_2_answer3" />

            <RadioButton
                android:id="@+id/question_2_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_2_answer4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/unesco_icon" />

            <TextView
                android:id="@+id/number_3"
                style="@style/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_3"
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/checkbox_q3_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_3_answer1" />

            <CheckBox
                android:id="@+id/checkbox_q3_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_3_answer2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/checkbox_q3_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_3_answer3" />

            <CheckBox
                android:id="@+id/checkbox_q3_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_3_answer4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/checkbox_q3_a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_3_answer5" />

            <CheckBox
                android:id="@+id/checkbox_q3_a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_3_answer6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/unesco_icon" />

            <TextView
                android:id="@+id/number_4"
                style="@style/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_4"
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <EditText
            android:id="@+id/question_4_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_4_answer1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/unesco_icon" />

            <TextView
                android:id="@+id/number_5"
                style="@style/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_5" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_5"
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/checkbox_q5_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_5_answer1" />

            <CheckBox
                android:id="@+id/checkbox_q5_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_5_answer2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/checkbox_q5_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_5_answer3" />

            <CheckBox
                android:id="@+id/checkbox_q5_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_5_answer4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/checkbox_q5_a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_5_answer5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/unesco_icon" />

            <TextView
                android:id="@+id/number_6"
                style="@style/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_6" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_6"
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6" />

        <RadioGroup
            android:id="@+id/question_6_radiobox"
            style="@style/questions_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <RadioButton
                android:id="@+id/question_6_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_6_answer1" />

            <RadioButton
                android:id="@+id/question_6_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_6_answer2" />

            <RadioButton
                android:id="@+id/question_6_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_6_answer3" />

            <RadioButton
                android:id="@+id/question_6_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@integer/question_6_answer4" />
        </RadioGroup>

        <Button
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/button_submit_answers" />

        <Button
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetScore"
            android:text="@string/button_reset_score"
            android:textSize="12sp"/>

    </LinearLayout>

</ScrollView>
